--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ body {
 .video-box {
     position: relative;
     width: 100%;
-    padding-top: 56.25%; /* 16:9 */
+    padding-top: 56.25%; 
     overflow: hidden;
 }
 
@@ -91,7 +91,6 @@ body {
     border: none;
 }
 
-/* Responsive */
 @media (max-width: 900px) {
     .video-grid {
         grid-template-columns: repeat(2, 1fr);
